# prisma

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  output.exr
.github/workflows/: rust.yml
docs/: README.md
ext/: CMakeLists.txt
models/: cornell-box.mtl
scene/: script.lua
scripts/: cornell-box.lua  cornell_box.lua  earth.lua  glass_ball.lua  lucy.lua  rtiow.lua  scene.lua
shaders/: materials.wgsl  post_process.wgsl  render.wgsl  shader.wgsl  textures.wgsl
shaders/core/: intersection.wgsl  primitive.wgsl  ray.wgsl  triangle.wgsl
shaders/scene/: camera.wgsl  scene.wgsl
shaders/utils/: aabb.wgsl  constants.wgsl  interval.wgsl  rand.wgsl
src/: camera.rs  cli.rs  config.rs  core.rs  lib.rs  main.cu  main.rs  materials.rs  math.rs  meshes.rs  model.rs  models.rs  primitives.rs  ray.rs  scene.rs  scripting.rs  shapes.rs  textures.rs  utils.rs
src/camera/: camera.cu  camera.hpp  film.hpp
src/cameras/: camera.hpp  ortho_camera.hpp  persp_camera.hpp
src/config/: constants.h  types.h
src/core/: aabb.rs  bound.cu  bound.hpp  bounds.cu  bounds.hpp  bvh.rs  camera.cu  camera.hpp  camera.rs  color.hpp  film.hpp  interaction.hpp  intersect.rs  material.rs  point.hpp  post_processor.rs  primitive.rs  ray.hpp  render_context.rs  renderer.rs  scene.hpp  scene.rs  texture.rs  triangle.hpp  triangle.rs  utils.cu  utils.h  vector.hpp  vertex.rs
src/materials/: dielectric.rs  lambertian.rs  light.rs  metal.rs
src/models/: materials.rs  meshes.rs
src/primitives/: quad.rs  sphere.rs
src/render/: mod.rs  (+3 more)
(+37 files in other folders)
